# friendly-parakeet

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/friendly_parakeet/: __init__.py  agent.py  chunker.py  cli.py  gemini_client.py  index.py  pdf_reader.py  web_app.py
tests/: test_agent.py  test_index.py  test_pdf_reader.py
